2005-12-01  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* src/htdocs/news/news.xml:
	  release

2005-12-01  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* src/htdocs/releases/gst-ffmpeg/0.9.7.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/releases/gst-plugins-bad/0.9.7.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-base/0.9.7.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.9.7.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.9.7.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	* src/htdocs/releases/gst-python/0.9.7.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	* src/htdocs/releases/gstreamer/0.9.7.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  releasing 0.9.7

2005-11-24  Andy Wingo  <wingo@pobox.com>

	* src/htdocs/entities.gst: Update entities

	* src/htdocs/news/status.xml: dump

2005-11-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.9.6.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/releases/gst-plugins-bad/0.9.6.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-base/0.9.6.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-plugins-base/template.xml:
	* src/htdocs/releases/gst-plugins-good/0.9.6.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.9.6.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	* src/htdocs/releases/gst-python/0.9.6.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	* src/htdocs/releases/gstreamer/0.9.6.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  releasing 0.9.6

2005-11-19  Andy Wingo  <wingo@pobox.com>

	* src/htdocs/entities.gst: Update versions.
