@@ -1,3 +1,9 @@
+2005-12-03  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* src/htdocs/documentation/Makefile.am:
+	* src/htdocs/documentation/index.xml:
+	  add plugin docs from core and bad
+
 2005-12-01  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>
 
 	* src/htdocs/news/news.xml:
